--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>TiempoDojo by Coding Dojo & Cayuyo</title>
+
+    <link rel='stylesheet' href='./css/styles.css'>
 </head>
 <body>
     <div class='header'>
@@ -13,5 +15,7 @@
     <div class='contenido'>
 
     </div>
+
+    <script src='./js/funciones.js'></script>
 </body>
 </html>
